...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_main"

    android:background="@drawable/background_gradient"
    tools:context=".ChooseLoginRegistrationActivity">



...
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="@dimen/margin_bottom"

            android:background="@android:color/transparent"
            android:text="Register"
            android:textColor="@color/custom"
            android:textSize="18dp"
            android:layout_toRightOf="@id/textView2"
            android:layout_alignParentBottom="true"

            />

...
