<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">



    <item
        android:id="@+id/dashboard"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/ic_dashboard"
        android:title="Home" />



    <item android:id="@+id/action_bar"
        android:title="@string/action_bar_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />



        />





</menu>